--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,75 @@
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-weight: 300;
+}
 
+body {
+    font-family: "Source Sans Pro", sans-serif;
+    color: white;
+    font-weight: 300;
+    background: #50a3a2;
+    width: 100%;
+    height: 100%;
+}
+
+.login-img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 80px;
+    border: 5px solid white;
+    padding: 10px;
+    border-radius: 50%;
+}
+
+.login-container {
+    margin: -20px auto;
+    padding: 80px 0;
+    text-align: center;
+}
+
+.login-container h1 {
+    font-size: 40px;
+    font-weight: bold;
+    text-decoration: underline;
+    font-family: "Comfortaa Light", sans-serif;
+}
+
+.login-form {
+    padding: 20px 0;
+    position: relative;
+}
+
+.login-form>input {
+    border: 1px solid rgba(252, 252, 252, 0.4);
+    background-color: rgba(252, 252, 252, 0.2);
+    width: 250px;
+    border-radius: 3px;
+    font-family: "Source Sans Pro", sans-serif;
+    padding: 10px 15px;
+    margin: 0 auto 10px auto;
+    display: block;
+    text-align: center;
+    font-size: 18px;
+    color: white;
+    font-weight: 300;
+}
+
+.login-form button {
+    appearance: none;
+    outline: 0;
+    background-color: white;
+    border: 0;
+    padding: 10px 15px;
+    color: #50a3a2;
+    border-radius: 3px;
+    width: 250px;
+    font-size: 18px;
+}
+
+.login-form button:hover, .login-form button:focus {
+    cursor: pointer;
+    background-color: black;
+}
